# V0.2 Release Notes

This is a alpha release, features are all complete, but not fully tested.

## New features

 * coasting mode works (aka. the opposite of braking mode)
 * new ways of setting low battery voltage limits

TODO write this